2009-XXXXX version 2.9.0
  * Give visibility to templates and partials in Rails 2.1 and later
  * Capture gem information in configuration
  * Using a different timeout mechanism when we post data to RPM
  * Sample memory on linux by reading /proc/#{$$}/status file
  * changed API for manual starting of the agent; refer to
    NewRelic::Agent.manual_start for details
  * refactored to simplify startup sequence
  * add instrumentation to capture metrics on response codes
  * reduced the number of controller metrics that report to rpm
  * user rpm server time for transaction traces rather than agent time
  * added http referer to traced errors
  * on connection, get a shard collector to redirect to
  * removed Numeric extensions, including round_to, and to_ms
  * combined agent logfiles into a single logfile
  * in jruby, use Java used heap for memory sampling if the system
    memory is not accessible from an unsupported platform
  * fix various bugs with jruby support
2009-03-30 version 2.8.8
  * fix error with jruby on windows
  * fix problem where webrick was being incorrectly detected
    causing some problems with mongrel application assignments--had
    to disable webrick for now
2009-03-20 version 2.8.7
  * fix for ssl connection hanging problems
  * fix problem recognizing mongrel in rails 2.3.2
  * fastcgi support in rails 2.3.2
  * put back webrick support
2009-03-16 version 2.8.6
  * fix for capture_params when using file uploads in controller actions
  * use pure ruby NS lookup for collector host to eliminate possibly  
    blocking applications
2009-02-22 version 2.8.5
  * fix reference to CommandError which was breaking some cap scripts
  * fix incompatibility with Rails 2.0 in the server API
  * fix problem with litespeed with Lite accounts
  * fix problem when ActiveRecord is disabled
  * moved merb instrumentation to Merb::Controller instead of 
    AbstractController to address incompatibility with MailController